--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- This is the main container for the homepage content, keeping it centered and readable. -->
     <div class="bg-white rounded-3xl shadow-xl max-w-5xl mx-auto p-8 md:p-12 transition-all duration-300 flex-grow flex flex-col items-center">
         <!-- This is a placeholder for your company's logo. You can replace the URL with your own image. -->
-        <img src="C:\Users\Vidhansh Rachalwar\OneDrive\Music\Desktop\About Me\HMSM\business_logo.png" alt="Company Logo" class="w-24 h-24 md:w-32 md:h-32 rounded-full shadow-lg mb-8">
+        <img src="business_logo.png" alt="Company Logo" class="w-24 h-24 md:w-32 md:h-32 rounded-full shadow-lg mb-8">
         
         <!-- Main title for the page. You can change this text. -->
         <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-6">Welcome to Handle My Social Media</h1>
@@ -69,3 +69,4 @@
     </footer>
 </body>
 </html>
+
