--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- This line sets the title that appears in the browser tab. You can change this text. -->
-    <title>Handle My Social Media</title>
+    <title>HMSM</title>
     <!-- This line adds the megaphone icon that appears in the browser tab, also known as a favicon. -->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236B46C1'%3E%3Cpath d='M18 10h-2V6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v4H4c-1.1 0-2 .9-2 2v2c0 1.1.9 2 2 2h2v4c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2v-4h2c1.1 0 2-.9 2-2v-2c0-1.1-.9-2-2-2zM8 18v-4h6v4H8z'/%3E%3C/svg%3E" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -21,7 +21,7 @@
     <!-- This is the navigation bar. It appears on all pages for easy site navigation. -->
     <nav class="w-full max-w-5xl mx-auto flex items-center justify-between p-4 mb-8 bg-white rounded-full shadow-lg">
         <!-- Brand Name/Logo - Clicks back to the homepage. -->
-        <a href="index.html" class="font-bold text-lg md:text-xl text-indigo-600">Handle My Social Media</a>
+        <a href="index.html" class="font-bold text-lg md:text-xl text-indigo-600">HMSM</a>
         <!-- Navigation Links -->
         <ul class="flex space-x-4 md:space-x-6">
             <li><a href="services.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">Services</a></li>
@@ -69,5 +69,6 @@
     </footer>
 </body>
 </html>
+
 
 
