--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- This line sets the title that appears in the browser tab. You can change this text. -->
-    <title>Handle My Social Media</title>
+    <title>Handle My Social Media - HMSM</title>
     <!-- This line adds the megaphone icon that appears in the browser tab, also known as a favicon. -->
-    <link rel="icon" href="business_logo" viewBox='0 0 24 24' fill='%236B46C1'%3E%3Cpath d='M18 10h-2V6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v4H4c-1.1 0-2 .9-2 2v2c0 1.1.9 2 2 2h2v4c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2v-4h2c1.1 0 2-.9 2-2v-2c0-1.1-.9-2-2-2zM8 18v-4h6v4H8z'/%3E%3C/svg%3E" />
+    <link rel="icon" href="business_logo.png" viewBox='0 0 24 24' fill='%236B46C1'%3E%3Cpath d='M18 10h-2V6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v4H4c-1.1 0-2 .9-2 2v2c0 1.1.9 2 2 2h2v4c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2v-4h2c1.1 0 2-.9 2-2v-2c0-1.1-.9-2-2-2zM8 18v-4h6v4H8z'/%3E%3C/svg%3E" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -26,7 +26,7 @@
         <ul class="flex space-x-4 md:space-x-6">
             <li><a href="services.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">Services</a></li>
             <li><a href="blog.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">Blog</a></li>
-           <!-- <li><a href="contact.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">Contact Us</a></li> --!>
+            <li><a href="contact.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">Contact Us</a></li>
             <li><a href="about_founder.html" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300">About Founder</a></li>
         </ul>
     </nav>
@@ -69,6 +69,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
