--- a/about_founder.html
+++ b/about_founder.html
@@ -7,7 +7,7 @@
     <title>Aniket Rachalwar | Handle My Social Media</title>
     
     <!-- This is the browser tab icon (favicon). We've used a simple blue circle for now. You can replace the link with your own icon later. -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%233B82F6'/%3E%3C/svg%3E" type="image/svg+xml">
+    <link rel="icon" href="business_logo.png" type="image/svg+xml">
     
     <!-- Tailwind CSS for a creative, utility-first design -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
