--- a/about_founder.html
+++ b/about_founder.html
@@ -7,7 +7,7 @@
     <title>Aniket Rachalwar | Handle My Social Media</title>
     
     <!-- This is the browser tab icon (favicon). We've used a simple blue circle for now. You can replace the link with your own icon later. -->
-    <link rel="icon" href="business_logo.png" type="image/svg+xml">
+    <link rel="icon" href="business_logo.png">
     
     <!-- Tailwind CSS for a creative, utility-first design -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -184,5 +184,6 @@
 
 </body>
 </html>
+
 
 
