--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <!-- This line sets the title that appears in the browser tab. You can change this text. -->
     <title>Blog - Handle My Social Media</title>
     <!-- This line adds the megaphone icon that appears in the browser tab, also known as a favicon. -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236B46C1'%3E%3Cpath d='M18 10h-2V6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v4H4c-1.1 0-2 .9-2 2v2c0 1.1.9 2 2 2h2v4c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2v-4h2c1.1 0 2-.9 2-2v-2c0-1.1-.9-2-2-2zM8 18v-4h6v4H8z'/%3E%3C/svg%3E" />
+    <link rel="icon" href="business_logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -94,3 +94,4 @@
     </div>
 </body>
 </html>
+
